# snaze-snake-game-LP1

./: CMakeLists.txt  README.md
data/: death.txt  impossible.txt  maze.txt  maze1.txt  teste.txt
include/: Level.hpp  Player.hpp  Snake.hpp  SnakeGame.hpp  utils.hpp
src/: Level.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp  main.cpp  utils.cpp
